# FFNeuralNet

./: CMakeLists.txt  Jenkinsfile  README.md
SimpleFFNet/: SimpleFFNet.1  main.cpp
SimpleFFNet.xcodeproj/: project.pbxproj
SimpleFFNet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SimpleFFNet.xcodeproj/xcuserdata/phil.xcuserdatad/xcschemes/: SimpleFFNet.xcscheme  xcschememanagement.plist
XCode5/FFNeuralNet.xcodeproj/: project.pbxproj
XCode5/FFNeuralNet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCode5/FFNeuralNet.xcodeproj/xcuserdata/phil.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XCode5/FFNeuralNet.xcodeproj/xcuserdata/phil.xcuserdatad/xcschemes/: FFNetLib.xcscheme
XCode5/SimpleFFNet.xcodeproj/: project.pbxproj
XCode5/SimpleFFNet.xcodeproj/xcuserdata/phil.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XCode5/TestRunner.xcodeproj/: project.pbxproj
src/: ActivationFunction.cpp  ActivationFunction.h  BackPropagation.cpp  BackPropagation.h  EigenUtil.cpp  EigenUtil.h  FFNetCommon.cpp  FFNetCommon.h  FFNetExceptions.h  FFNeuralNet.cpp  FFNeuralNet.h  FFNeuralNetImpl.cpp  FFNeuralNetImpl.h  LayeredFeedForwardNeuralNet.cpp  LayeredFeedForwardNeuralNet.h  LearningAlgorithm.cpp  LearningAlgorithm.h  Serializable.h  StorableUnaryFunction.h  SupervisedLearningAlgorithm.h  TrainingSetIterator.cpp  TrainingSetIterator.h  UnaryExpressionParser.cpp  UnaryExpressionParser.h
test/: ActivationFunctionTests.cpp  FFNeuralNetTests.cpp  TestRunner.cpp
(+3 files in other folders)
